--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>_2015_AM_James_1TDSU__</name>
+	<name>James_AM</name>
 	<comment></comment>
 	<projects>
 	</projects>
